backface-visibility issue

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -53,9 +53,10 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  -webkit-perspective: 0;
   -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  visibility: visible;
   backface-visibility: hidden;
   transition: all 0.3s ease 0s;
 }
